# rust-wasm-3D

./: .gitignore  Cargo.toml  README.md  index.html  index.js
pkg/: david_rust_web_graphics.d.ts  david_rust_web_graphics.js  david_rust_web_graphics_bg.wasm  david_rust_web_graphics_bg.wasm.d.ts  package.json
src/: canvas_tests.rs  lib.rs  scene.rs  transformations.rs
src/scene/: camera.rs  mesh.rs
src/tests/: tests.rs
